# desktop-editor

./: CHANGELOG.md  README.md  desktop-editor_0.1.0-1_all.deb  desktop-editor_0.2.1_all.deb  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml  rpm-build.yml
.tx/: config
build-new/desktop-editor_0.2.1_all/DEBIAN/: control
build-new/desktop-editor_0.2.1_all/usr/lib/python3/dist-packages/desktop_editor/: i18n.py  main.py
build-new/desktop-editor_0.2.1_all/usr/share/applications/: se.danielnylander.desktop-editor.desktop
data/: se.danielnylander.desktop-editor.desktop  se.danielnylander.desktop-editor.desktop.in
data/man/: desktop-editor.1
debian/: changelog  control  copyright  files  rules  watch
po/: POTFILES.in  README.md  desktop-editor.pot  sv.mo  sv.po
po/man/: desktop-editor.1.pot  sv.po
po/sv/LC_MESSAGES/: desktop-editor.mo
rpm-build/desktop-editor_0.2.1/usr/lib/python3/dist-packages/desktop_editor/: __init__.py  window.py
rpm-build/desktop-editor_0.2.1/usr/share/locale/sv/LC_MESSAGES/: desktop-editor.mo
src/desktop_editor/: __init__.py  app.py  desktop_file.py  main.py  window.py
