[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-editor"
version = "0.2.1"
description = "Visual editor for .desktop files with preview, validation, and translation management"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Daniel Nylander", email = "daniel@danielnylander.se"},
]
keywords = ["desktop", "freedesktop", "gtk4", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyGObject>=3.42",
]

[project.scripts]
desktop-editor = "desktop_editor.main:main"

[project.gui-scripts]
desktop-editor = "desktop_editor.main:main"

[project.urls]
Homepage = "https://github.com/yeager/desktop-editor"
Repository = "https://github.com/yeager/desktop-editor"
Issues = "https://github.com/yeager/desktop-editor/issues"

[tool.setuptools.packages.find]
where = ["src"]
